# Bloom-Filters

./: .gitignore  Bloom-Filters Documentation.txt  Bloom_project.sln  README.md
Bloom_project/: .gitignore  AnyBase.hpp  Bloom_project.cpp  Bloom_project.vcxproj  Bloom_project.vcxproj.filters  CMakeLists.txt  CounterBloom.hpp  CuckooFilter.hpp  CuckooNonProbability.hpp  DynamicBloomFilter.hpp  DynamicBloomHLLFilter.hpp  InvertibleBloomFilter.hpp  MyLinkedList.hpp  ProgramMenu.h  YFastTrie.hpp  datausers.db  diag1.txt  diag2.txt  diag3.txt  main.cpp  test.db  test.db-journal  test2.db  test2.db-journal  words.txt
Bloom_project/resources/: 1000_SalesRecords.csv  data.txt
Bloom_project/sqlite/: sqlite3.lib
Bloom_project/src/: main.cpp
Bloom_project/src/analysis/: CollisionAnalyzer.cpp  CollisionAnalyzer.hpp
Bloom_project/src/core/: BloomFilter.cpp  BloomFilter.hpp  Bloom_project.cpp  CuckooFilter.hpp  CuckooNonProbability.hpp  DynamicBloomFilter.hpp  DynamicBloomHLLFilter.hpp  HyperLogLog.cpp  HyperLogLog.hpp  InvertibleBloomFilter.hpp  Utils.cpp  Utils.hpp
Bloom_project/src/data_structures/: MyLinkedList.hpp  SkipList.cpp  SkipList.hpp  SkipNode.hpp  YFastTrie.hpp
Bloom_project/src/hash/: HashFunctions.cpp  HashFunctions.hpp  md5.cpp  md5.h  sha256.cpp
Bloom_project/src/ui/: ProgramMenu.h
Bloom_project/x64/Debug/: Bloom_project.exe.recipe  vc143.idb
Bloom_project/x64/Debug/Bloom_project.tlog/: Bloom_project.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Bloom_project/x64/Release/Bloom_project.tlog/: Bloom_project.lastbuildstate
